--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ dependencies {
     testImplementation 'io.rest-assured:rest-assured:3.3.0'
 
     runtimeOnly 'com.h2database:h2'
+
+    implementation 'javax.xml.bind:jaxb-api:2.3.1'
 }
 test {
     useJUnitPlatform()
