--- a/build.gradle
+++ b/build.gradle
@@ -16,14 +16,14 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 
     //security
-    implementation 'org.springframework.boot:spring-boot-starter-security'
+    //implementation 'org.springframework.boot:spring-boot-starter-security'
 
     // jwt
-    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
-    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+    //implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    //implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    //implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
-    //implementation 'io.jsonwebtoken:jjwt:0.9.1'
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
     implementation 'net.rakugakibox.spring.boot:logback-access-spring-boot-starter:2.7.1'
 
