--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,20 @@ plugins {
     id 'org.springframework.boot' version '2.7.2'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
+    id 'com.google.cloud.tools.jib' version '3.3.1'
 }
-
+jib {
+    from {
+        image = "adoptopenjdk/openjdk11"
+    }
+    to {
+        image = "idock.daumkakao.io/onboarding2023/soony.kwonn"
+        tags = [ "latest" ]
+    }
+    container {
+        ports = [ "8080" ]
+    }
+}
 group 'nextstep'
 version '1.0-SNAPSHOT'
 
