feat: 멤버에 Role 속성 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,10 @@ spring:
   h2:
     console:
       enabled: true
+  sql:
+    init:
+      schema-locations: classpath:sql/schema.sql
+      mode: always
 
 auth:
   secretKey: learning-test-spring
