--- a/build.gradle
+++ b/build.gradle
@@ -19,11 +19,14 @@ dependencies {
 
     implementation 'net.rakugakibox.spring.boot:logback-access-spring-boot-starter:2.7.1'
 
+    implementation 'javax.xml.bind:jaxb-api:2.3.0'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.rest-assured:rest-assured:3.3.0'
 
     runtimeOnly 'com.h2database:h2'
 }
+
 test {
     useJUnitPlatform()
 }
