--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
     implementation 'net.rakugakibox.spring.boot:logback-access-spring-boot-starter:2.7.1'
+    implementation 'javax.validation:validation-api:2.0.1.Final'
 
     compileOnly 'org.projectlombok:lombok:1.18.24'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
@@ -25,6 +26,7 @@ dependencies {
 
     runtimeOnly 'com.h2database:h2'
 }
+
 test {
     useJUnitPlatform()
 }
