--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ dependencies {
 
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
+    implementation group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '2.3.2'
+
     implementation 'net.rakugakibox.spring.boot:logback-access-spring-boot-starter:2.7.1'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
