[baker.gus] Step1 & Step2 (#32)
* feat: 토큰 새성 api 작성

* feat: 내 정보 확인 기능 추가

* feat: 예약 생성 및 삭제에 로그인 기능 추가

* refactor: interceptor 제거

* refactor: test 리팩터

* refactor: AuthenticationException 리팩터

* feat: MemberRepository 추가

* feat: null체크 추가

* refactor: 검증 로직 AuthValidator로 이동

* refactor: authE2ETest 리팩터

* refactor: Member에 빌더 적용

* refactor: MemberE2ETest 리팩터

* feat: RecordNotFoundException 추가

* feat: ReservationValidator 추가 및 리팩터

* feat: ScheduleRepository 추가

* feat: DuplicateEntityException handler에 추가

* feat: 중복 예약 validate 추가

* feat: 없는 예약 삭제 예외 추가

* refactor: reservationDao 리팩토링

* refactor: Dao 리팩토링

* refactor: raw ResponseEntity 수정

* refactor: 빈 리스트 반환하도록 수정

* refactor: member에 role 추가

* refactor: 구현체에서 interface로 전환

* fix: token에서 Role을 받도록 수정

Co-authored-by: baker.gus <baker.gus@kakaocorp.com>

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,12 @@ dependencies {
     testImplementation 'io.rest-assured:rest-assured:3.3.0'
 
     runtimeOnly 'com.h2database:h2'
+    //swagger
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
+    implementation 'io.springfox:springfox-swagger-ui:3.0.0'
+
+    compileOnly 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
 }
 test {
     useJUnitPlatform()
