--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,6 +8,6 @@ spring:
     driver-class-name: org.h2.Driver
   sql:
     init:
-      schema-locations: classpath*:schema.sql
-      data-locations: classpath*:data.spl
+      schema-locations: classpath:schema.sql
+      data-locations: classpath:data.sql
       mode: always
