--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,4 +12,8 @@ spring:
       mode: always
 
   jpa:
-    defer-datasource-initialization:
+    defer-datasource-initialization: true
+
+auth:
+  secret-key: learning-test-spring
+  expiration-time: 3600000
