--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,3 +2,11 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
+  h2:
+    console:
+      enabled: true
+  profiles:
+    include: secret
+logging:
+  level:
+    root: debug
