--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,1 @@
-spring:
-  datasource:
-    hikari:
-      jdbc-url: jdbc:h2:tcp://localhost:1521/test
-      username: sa
-      password:
-      driver-class-name: org.h2.Driver
+spring.sql.init.mode=always
