--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
 admin:
   username: admin-joel
   password: admin-joel-pw
-  name: joel
+  name: admin-joel
   phone: 010-1234-5678
 jwt:
   member-secret: learning-test-spring
