--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,13 @@ dependencies {
     testImplementation 'io.rest-assured:rest-assured:3.3.0'
 
     runtimeOnly 'com.h2database:h2'
+    //swagger
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
+    implementation 'io.springfox:springfox-swagger-ui:3.0.0'
+
+    implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
 }
+
 test {
     useJUnitPlatform()
 }
