--- a/build.gradle
+++ b/build.gradle
@@ -21,10 +21,10 @@ dependencies {
     implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
     implementation group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.3.0.1'
     implementation group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.3.1'
+    implementation 'com.h2database:h2:1.3.176'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.rest-assured:rest-assured:3.3.0'
-    runtimeOnly 'com.h2database:h2'
 }
 test {
     useJUnitPlatform()
