--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.rest-assured:rest-assured:3.3.0'
 
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
+
     runtimeOnly 'com.h2database:h2'
 }
 test {
