feat : data.spl sql 확장자로 변경

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,5 +9,5 @@ spring:
   sql:
     init:
       schema-locations: classpath*:schema.sql
-      data-locations: classpath*:data.spl
+      data-locations: classpath*:data.sql
       mode: always
